# iwmfdiff

./: .gitignore  README.md  attack.py  attack_PIN.py  backup.sh  backup_setup.py  defense.py  evaluation.py  evaluation_PIN.py  main.py  my_task.sh  perturbations.py  pyproject.toml  requirements.txt  test.py  test_iwmfdiff.py
PIN/: config_test.py  config_train.py  defense_model.py  feature_extraction.py  light_cnn.py  pca_loss_fn.py  pca_select_model.py  recon_fn.py  train.py  vision_image_folder.py
autoattack_fr/: autopgd_base.py  square.py
ddrm/: main.py
ddrm/functions/: denoising.py
examples/: main.py
functions/: defense.py  utils.py
functions/insightface/: iresnet.py
functions/models/: __init__.py
insightface/: iresnet.py
iwmfdiff/: __init__.py  defense.py  utils.py
iwmfdiff/autoattack_fr/: square.py
src/iwmfdiff/: __init__.py  defense.py  utils.py
src/iwmfdiff.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/iwmfdiff/autoattack_fr/: autoattack.py  autopgd_base.py  square.py
src/iwmfdiff/ddrm/functions/: denoising.py
src/iwmfdiff/scripts/: attack.py  defense.py  evaluation.py
